# DeepResearch

./: .env.example  .gitignore  00_系统概述.md  01_系统中的Agent设计.md  02_后端技术栈.md  03_开发规范.md  04_系统时序图与数据流.md  05_接口设计.md  06_模块设计.md  07_端到端测试方案.md  08_确定性报告生成配套调整清单.md  10_生产化改造方案.md  Dockerfile.mongodb  pyproject.toml  start_tei_server.sh
app/: main.py
app/agents/: research_agent.py
app/agents/prompts/: report_agent.md  research_manager.md
app/background/: research_tasks.py
app/config/: config.py
app/repository/: report_repository.py  research_project_repository.py  research_task_repository.py
app/routers/: __init__.py
app/schemas/: __init__.py
app/tools/: report_writer.py  research_workspace.py
ragflow-docker/: RAGFlow Docker 部署踩坑记录.md
scripts/: modelscope_download.py
static/: index.html
最终课件/: 02_异步任务构建和数据存储.md  03_研究Agent设计与开发.md
